--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        div{ width:400px; height:400px; border:1px solid silver;}
+
+    </style>
 </head>
 <body>
   <div>hello sample</div>
